--- a/meet-landing-page/index.html
+++ b/meet-landing-page/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
+    <main>
       <section class="section section--1">
         <img class="logo" src="images/logo.svg" alt="meet logo" />
         <img
@@ -21,18 +22,30 @@
           src="images/image-hero.png"
           alt="twelve circular headshots of various people"
         />
-        <div class="content">
-          <h1>Group Chat for Everyone</h1>
-          <p>
-            Meet makes it easy to connect with others face-to-face virtually and
-            collaborate across any device.
-          </p>
-          <div class="btns">
-            <button class="btn btn--primary">
-              Download <span class="accent">v1.3</span>
-            </button>
-            <button class="btn">What is it?</button>
+        <div class="banner">
+          <img
+            class="hero-left"
+            src="images/image-hero-left.png"
+            alt="six circular headshots of various people"
+          />
+          <div class="content content--1">
+            <h1>Group Chat for Everyone</h1>
+            <p>
+              Meet makes it easy to connect with others face-to-face virtually
+              and collaborate across any device.
+            </p>
+            <div class="btns">
+              <button class="btn btn--primary">
+                Download <span class="accent">v1.3</span>
+              </button>
+              <button class="btn">What is it?</button>
+            </div>
           </div>
+          <img
+            class="hero-right"
+            src="images/image-hero-right.png"
+            alt="six circular headshots of various people"
+          />
         </div>
 
         <div class="line line--1"></div>
@@ -61,7 +74,7 @@
             alt="man texting"
           />
         </div>
-        <div class="content">
+        <div class="content content--2">
           <h3>Built for modern use</h3>
           <h2>Smarter meetings, all in one place</h2>
           <p>
@@ -76,7 +89,7 @@
         </div>
       </section>
       <section class="section section--3">
-        <div class="content">
+        <div class="content content--3">
           <h2>Experience more together</h2>
           <p>
             Stay connected with reliable HD meetings and unlimited one-on-one
