--- a/article-preview/index.html
+++ b/article-preview/index.html
@@ -1,36 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
-
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
-
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Article preview component</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+  <body>
+    <main class="card">
+      <img
+        class="hero"
+        src="images/drawers.jpg"
+        alt="green draws with a picture frame containing the words 'love will keep us alive'"
+      />
+      <div class="content">
+        <h1 class="content__title">
+          Shift the overall look and feel by adding these wonderful touches to
+          furniture in your home
+        </h1>
+        <p class="content__detail">
+          Ever been in a room and felt like something was missing? Perhaps it
+          felt slightly bare and uninviting. I’ve got some simple tips to help
+          you make any room feel complete.
+        </p>
+      </div>
+      <div class="author">
+        <img
+          src="images/avatar-michelle.jpg"
+          alt="headshot of Michelle"
+          class="author__portait"
+        />
+        <div class="author__details">
+          <p class="author__details__name">Michelle Appleton</p>
+          <p class="author__details__date">28 Jun 2020</p>
+        </div>
+        <button class="share__btn">
+          <img
+            class="share__btn__icon"
+            alt="share icon"
+            src="images/icon-share.svg"
+          />
+        </button>
+      </div>
+      <div class="share hidden">
+        <h2 class="share__title">Share</h2>
+        <a href="#" class="share__link">
+          <img
+            class="share__icon"
+            alt="facebook icon"
+            src="images/icon-facebook.svg"
+          />
+        </a>
+        <a href="#" class="share__link">
+          <img
+            class="share__icon"
+            alt="twitter icon"
+            src="images/icon-twitter.svg"
+          />
+        </a>
+        <a href="#" class="share__link">
+          <img
+            class="share__icon"
+            alt="pintrest icon"
+            src="images/icon-pinterest.svg"
+          />
+        </a>
+        <button class="share__btn">
+          <img
+            class="share__btn__icon"
+            alt="share icon"
+            src="images/icon-share-alt.svg"
+          />
+        </button>
+      </div>
+    </main>
+  </body>
 </html>
