--- a/article-preview/index.html
+++ b/article-preview/index.html
@@ -11,6 +11,7 @@
     />
     <title>Frontend Mentor | Article preview component</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/media.css" />
   </head>
   <body>
     <main class="card">
@@ -26,7 +27,7 @@
         </h1>
         <p class="content__detail">
           Ever been in a room and felt like something was missing? Perhaps it
-          felt slightly bare and uninviting. I’ve got some simple tips to help
+          felt slightly bare and uninviting. I've got some simple tips to help
           you make any room feel complete.
         </p>
       </div>
@@ -40,15 +41,16 @@
           <p class="author__details__name">Michelle Appleton</p>
           <p class="author__details__date">28 Jun 2020</p>
         </div>
-        <button class="share__btn">
-          <img
-            class="share__btn__icon"
-            alt="share icon"
-            src="images/icon-share.svg"
-          />
+        <button id="btn-share" class="share-btn">
+          <svg class="share-btn__icon" xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill="#6E8098"
+              d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"
+            />
+          </svg>
         </button>
       </div>
-      <div class="share hidden">
+      <div id="share" class="share hidden">
         <h2 class="share__title">Share</h2>
         <a href="#" class="share__link">
           <img
@@ -71,13 +73,6 @@
             src="images/icon-pinterest.svg"
           />
         </a>
-        <button class="share__btn">
-          <img
-            class="share__btn__icon"
-            alt="share icon"
-            src="images/icon-share-alt.svg"
-          />
-        </button>
       </div>
     </main>
   </body>
