--- a/newsletter-sign-up/index.html
+++ b/newsletter-sign-up/index.html
@@ -3,53 +3,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
-
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
   <body>
-    <!-- Sign-up form start -->
-
-    Stay updated! Join 60,000+ product managers receiving monthly updates on:
-    Product discovery and building what matters Measuring to ensure updates are
-    a success And much more! Email address email@company.com Subscribe to
-    monthly newsletter
-
-    <!-- Sign-up form end -->
-
-    <!-- Success message start -->
-
-    Thanks for subscribing! A confirmation email has been sent to
-    ash@loremcompany.com. Please open it and click the button inside to confirm
-    your subscription. Dismiss message
-
-    <!-- Success message end -->
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    <article class="signup">
+      <img
+        class="signup__hero"
+        src="assets/images/illustration-sign-up-mobile.svg"
+        alt="abstract illustration of a monitor with detached webpage and further detached webpage elements"
+      />
+      <main class="signup__main">
+        <h1 class="main__title">Stay updated!</h1>
+        <p class="main__text">
+          Join 60,000+ product managers receiving monthly updates on:
+        </p>
+        <ul class="main__list">
+          <li class="list_item">
+            <img
+              src="assets/images/icon-list.svg"
+              alt="tick box"
+              class="item__icon"
+            />
+            <p class="item__text">
+              Product discovery and building what matters
+            </p>
+          </li>
+          <li class="list_item">
+            <img
+              src="assets/images/icon-list.svg"
+              alt="tick box"
+              class="item__icon"
+            />
+            <p class="item__text">Measuring to ensure updates are a success</p>
+          </li>
+          <li class="list_item">
+            <img
+              src="assets/images/icon-list.svg"
+              alt="tick box"
+              class="item__icon"
+            />
+            <p class="item__text">And much more!</p>
+          </li>
+        </ul>
+        <form action="" class="main__form">
+          <label for="email" class="form__label form__label--email"
+            >Email address</label
+          >
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="form__input form__input--email"
+            placeholder="email@company.com"
+          />
+          <button class="btn btn--signup">
+            Subscribe to monthly newsletter
+          </button>
+        </form>
+      </main>
+    </article>
+    <article class="success">
+      <img
+        src="assets/images/icon-success.svg"
+        alt="tick mark"
+        class="success__tick"
+      />
+      <h2 class="success__title">Thanks for subscribing!</h2>
+      <p class="success__text">
+        A confirmation email has been sent to ash@loremcompany.com. Please open
+        it and click the button inside to confirm your subscription.
+      </p>
+      <button class="btn btn--success">Dismiss message</button>
+    </article>
   </body>
 </html>
