--- a/newsletter-sign-up/index.html
+++ b/newsletter-sign-up/index.html
@@ -15,74 +15,81 @@
     </title>
   </head>
   <body>
-    <article class="signup">
-      <img
-        class="signup__hero"
-        src="assets/images/illustration-sign-up-mobile.svg"
-        alt="abstract illustration of a monitor with detached webpage and further detached webpage elements"
-      />
-      <main class="signup__main">
-        <h1 class="main__title">Stay updated!</h1>
-        <p class="main__text">
-          Join 60,000+ product managers receiving monthly updates on:
-        </p>
-        <ul class="main__list">
-          <li class="list_item">
-            <img
-              src="assets/images/icon-list.svg"
-              alt="tick box"
-              class="item__icon"
+    <div class="content">
+      <article class="signup">
+        <img
+          class="signup__hero"
+          src="assets/images/illustration-sign-up-mobile.svg"
+          alt="abstract illustration of a monitor with detached webpage and further detached webpage elements"
+        />
+        <main class="signup__main">
+          <h1 class="main__title">Stay updated!</h1>
+          <p class="main__text">
+            Join 60,000+ product managers receiving monthly updates on:
+          </p>
+          <ul class="main__list">
+            <li class="list_item">
+              <img
+                src="assets/images/icon-list.svg"
+                alt="tick box"
+                class="item__icon"
+              />
+              <p class="item__text">
+                Product discovery and building what matters
+              </p>
+            </li>
+            <li class="list_item">
+              <img
+                src="assets/images/icon-list.svg"
+                alt="tick box"
+                class="item__icon"
+              />
+              <p class="item__text">
+                Measuring to ensure updates are a success
+              </p>
+            </li>
+            <li class="list_item">
+              <img
+                src="assets/images/icon-list.svg"
+                alt="tick box"
+                class="item__icon"
+              />
+              <p class="item__text">And much more!</p>
+            </li>
+          </ul>
+          <form action="" class="main__form">
+            <label for="email" class="form__label form__label--email"
+              >Email address</label
+            >
+            <input
+              type="email"
+              name="email"
+              id="email"
+              class="form__input form__input--email"
+              placeholder="email@company.com"
             />
-            <p class="item__text">
-              Product discovery and building what matters
-            </p>
-          </li>
-          <li class="list_item">
-            <img
-              src="assets/images/icon-list.svg"
-              alt="tick box"
-              class="item__icon"
-            />
-            <p class="item__text">Measuring to ensure updates are a success</p>
-          </li>
-          <li class="list_item">
-            <img
-              src="assets/images/icon-list.svg"
-              alt="tick box"
-              class="item__icon"
-            />
-            <p class="item__text">And much more!</p>
-          </li>
-        </ul>
-        <form action="" class="main__form">
-          <label for="email" class="form__label form__label--email"
-            >Email address</label
-          >
-          <input
-            type="email"
-            name="email"
-            id="email"
-            class="form__input form__input--email"
-            placeholder="email@company.com"
+            <button class="btn btn--signup">
+              Subscribe to monthly newsletter
+            </button>
+          </form>
+        </main>
+      </article>
+      <article class="success hidden">
+        <div class="success__message">
+          <img
+            src="assets/images/icon-success.svg"
+            alt="tick mark"
+            class="message__tick"
           />
-          <button class="btn btn--signup">
-            Subscribe to monthly newsletter
-          </button>
-        </form>
-      </main>
-    </article>
-    <article class="success hidden">
-      <img
-        src="assets/images/icon-success.svg"
-        alt="tick mark"
-        class="success__tick"
-      />
-      <h2 class="success__title">Thanks for subscribing!</h2>
-      <p class="success__text">
-        A confirmation email has been sent to ash@loremcompany.com. Please open
-        it and click the button inside to confirm your subscription.
-      </p>
-      <button class="btn btn--success">Dismiss message</button>
-    </article>
+          <h2 class="message__title">Thanks for subscribing!</h2>
+          <p class="message__text">
+            A confirmation email has been sent to
+            <strong>ash@loremcompany.com</strong>. Please open it and click the
+            button inside to confirm your subscription.
+          </p>
+        </div>
+        <button class="btn btn--success">Dismiss message</button>
+      </article>
+    </div>
   </body>
 </html>
