--- a/newsletter-sign-up/index.html
+++ b/newsletter-sign-up/index.html
@@ -10,6 +10,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <script defer src="./assets/js/main.js"></script>
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
@@ -57,24 +58,28 @@
               <p class="item__text">And much more!</p>
             </li>
           </ul>
-          <form action="" class="main__form">
-            <label for="email" class="form__label form__label--email"
-              >Email address</label
-            >
-            <input
-              type="email"
-              name="email"
-              id="email"
-              class="form__input form__input--email"
-              placeholder="email@company.com"
-            />
-            <button class="btn btn--signup">
+          <form action="" class="main__form" id="signup-form" novalidate>
+            <div class="form__email">
+              <div class="email__info">
+                <label for="email" class="email__label">Email address </label>
+                <p class="email__error" aria-live="polite" id="email-error"></p>
+              </div>
+              <input
+                class="email__input"
+                type="email"
+                name="email"
+                id="email"
+                autocomplete="email"
+                placeholder="email@company.com"
+              />
+            </div>
+            <button id="btn--signup" class="btn btn--signup">
               Subscribe to monthly newsletter
             </button>
           </form>
         </main>
       </article>
-      <article class="success hidden">
+      <article id="success" class="success hidden">
         <div class="success__message">
           <img
             src="assets/images/icon-success.svg"
@@ -84,11 +89,13 @@
           <h2 class="message__title">Thanks for subscribing!</h2>
           <p class="message__text">
             A confirmation email has been sent to
-            <strong>ash@loremcompany.com</strong>. Please open it and click the
-            button inside to confirm your subscription.
+            <strong id="email-confirmation"></strong>. Please open it and click
+            the button inside to confirm your subscription.
           </p>
         </div>
-        <button class="btn btn--success">Dismiss message</button>
+        <button id="btn--success" class="btn btn--success">
+          Dismiss message
+        </button>
       </article>
     </div>
   </body>
