--- a/newsletter-sign-up/index.html
+++ b/newsletter-sign-up/index.html
@@ -10,20 +10,26 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <link rel="stylesheet" href="./assets/css/media.css" />
     <script defer src="./assets/js/main.js"></script>
     <title>
       Frontend Mentor | Newsletter sign-up form with success message
     </title>
   </head>
   <body>
-    <div class="content">
-      <article class="signup">
-        <img
-          class="signup__hero"
-          src="assets/images/illustration-sign-up-mobile.svg"
-          alt="abstract illustration of a monitor with detached webpage and further detached webpage elements"
-        />
-        <main class="signup__main">
+    <main class="content">
+      <article id="signup" class="signup hidable">
+        <picture class="signup__hero">
+          <source
+            srcset="assets/images/illustration-sign-up-desktop.svg"
+            media="(min-width: 950px)"
+          />
+          <img
+            src="assets/images/illustration-sign-up-mobile.svg"
+            alt="abstract illustration of a monitor with detached webpage and further detached webpage elements"
+          />
+        </picture>
+        <div class="signup__main">
           <h1 class="main__title">Stay updated!</h1>
           <p class="main__text">
             Join 60,000+ product managers receiving monthly updates on:
@@ -77,9 +83,9 @@
               Subscribe to monthly newsletter
             </button>
           </form>
-        </main>
+        </div>
       </article>
-      <article id="success" class="success hidden">
+      <article id="success" class="success hidable hidden">
         <div class="success__message">
           <img
             src="assets/images/icon-success.svg"
@@ -97,6 +103,6 @@
           Dismiss message
         </button>
       </article>
-    </div>
+    </main>
   </body>
 </html>
