--- a/tip-calculator-app/index.html
+++ b/tip-calculator-app/index.html
@@ -1,44 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Frontend Mentor | Tip calculator app</title>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
+  </head>
+  <body>
+    <h1 class="title-img"><img src="images/logo.svg" alt="splitter" /></h1>
+    <main class="calculator">
+      <section class="inputs">
+        <div class="input-item">
+          <p class="input-label">Bill</p>
+          <div class="input-field">
+            <img class="input-icon" src="images/icon-dollar.svg" alt="" />
+            <input
+              id="bill"
+              class="input-element"
+              type="number"
+              placeholder="0"
+            />
+          </div>
+        </div>
+        <div class="tips">
+          <p class="input-label">Select Tip %</p>
+          <div class="tip-options">
+            <div class="tip-btn">
+              <input name="tip" type="radio" id="tip-btn-5" class="tip-radio" />
+              <label class="tip-label">5%</label>
+            </div>
+            <div class="tip-btn">
+              <input
+                name="tip"
+                type="radio"
+                id="tip-btn-10"
+                class="tip-radio"
+              />
+              <label class="tip-label">10%</label>
+            </div>
+            <div class="tip-btn">
+              <input
+                name="tip"
+                type="radio"
+                id="tip-btn-15"
+                class="tip-radio"
+                checked
+              />
+              <label class="tip-label">15%</label>
+            </div>
+            <div class="tip-btn">
+              <input
+                name="tip"
+                type="radio"
+                id="tip-btn-25"
+                class="tip-radio"
+              />
+              <label class="tip-label">25%</label>
+            </div>
+            <div class="tip-btn">
+              <input
+                name="tip"
+                type="radio"
+                id="tip-btn-50"
+                class="tip-radio"
+              />
+              <label class="tip-label">50%</label>
+            </div>
+            <input
+              id="tip-custom"
+              class="input-element-tip"
+              type="number"
+              placeholder="Custom"
+            />
+          </div>
+        </div>
+        <div class="input-item">
+          <p class="input-label">Number of People</p>
+          <div class="input-field">
+            <img class="input-icon" src="images/icon-person.svg" alt="" />
+            <input
+              id="people"
+              class="input-element"
+              type="number"
+              placeholder="0"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="outputs">
+        <div class="output-items">
+          <div class="output-item">
+            <div class="output-labels">
+              <p class="output-label">Tip Amount</p>
+              <p class="output-sub-label">/ person</p>
+            </div>
+            <p id="output-tip" class="output">$4.27</p>
+          </div>
+          <div class="output-item">
+            <div class="output-labels">
+              <p class="output-label">Total</p>
+              <p class="output-sub-label">/ person</p>
+            </div>
+            <p id="output-total" class="output">$32.79</p>
+          </div>
+        </div>
+        <button class="btn reset-btn">Reset</button>
+      </section>
+    </main>
+  </body>
 </html>
