--- a/password-generator-app/index.html
+++ b/password-generator-app/index.html
@@ -56,7 +56,7 @@
         <div class="strength-container">
           <span class="label-strength">Strength</span>
           <span id="output-strength-string">medium</span>
-          <div id="output-strength-visual">
+          <div id="output-strength-visual" class="strength-3">
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
