--- a/password-generator-app/index.html
+++ b/password-generator-app/index.html
@@ -10,6 +10,7 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
     <title>Frontend Mentor | Password generator app</title>
   </head>
   <body>
